# YoutubeDownloader

./: .gitignore  CMakeLists.txt  README.md
docs/superpowers/plans/: 2026-06-17-youtube-downloader-mvp.md  2026-06-22-ui-behavior-fixes.md  2026-06-24-persistent-download-queue.md  2026-06-24-reliability-cleanup.md
docs/superpowers/specs/: 2026-06-22-buffered-progress-dialogs-design.md  2026-06-22-custom-update-confirmation-design.md  2026-06-24-persistent-download-queue-design.md
src/: AppPaths.cpp  AppPaths.h  Application.cpp  Application.h  BackendText.cpp  BackendText.h  Config.cpp  Config.h  DialogWindows.cpp  DialogWindows.h  DownloadQueue.cpp  DownloadQueue.h  Logger.cpp  Logger.h  ProcessRunner.cpp  ProcessRunner.h  ToolManagers.cpp  ToolManagers.h  UiRenderer.cpp  UiRenderer.h  Version.cpp  Version.h  WinHttpClient.cpp  WinHttpClient.h  YtDlpClient.cpp  YtDlpClient.h  main.cpp  resource.h  resource.rc
src/App/: main.cpp
src/Core/: AppPaths.cpp  AppPaths.h  AppVersion.h  AsyncWait.cpp  AsyncWait.h  BackendText.cpp  BackendText.h  Config.cpp  Config.h  DownloadQueue.cpp  DownloadQueue.h  DownloadQueueStore.cpp  DownloadQueueStore.h  FileOperations.cpp  FileOperations.h  Logger.cpp  Logger.h  ToolManagers.cpp  ToolManagers.h  VoiceOverTranslationClient.cpp  VoiceOverTranslationClient.h  YtDlpClient.cpp  YtDlpClient.h
src/Platform/: ProcessRunner.cpp  WinHttpClient.cpp
src/UI/: Application.cpp  Application.h  DialogWindows.cpp  DialogWindows.h  UiActions.cpp  UiActions.h  UiRenderer.cpp  UiRenderer.h  resource.rc
tests/: test_core.cpp
